# Proyecto-I-Crazy-Breakout

./: Breakout.cpp  Breakout.h  CMakeLists.txt  MyObjects.h  client.cpp  config.h  dconfig  main.cpp  server.cpp
Doxygen/html/: Breakout_8h.html  Breakout_8h_source.html  MyObjects_8h.html  MyObjects_8h_source.html  annotated.html  classBreakout-members.html  classBreakout.html  classes.html  config_8h.html  config_8h_source.html  files.html  freeglut__std_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_vars.html  glut_8h_source.html  index.html  structBall-members.html  structBall.html  structBrick-members.html  structBrick.html  structPaddle-members.html  structPaddle.html
Doxygen/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
Doxygen/latex/: Breakout_8h.tex  Breakout_8h_source.tex  MyObjects_8h.tex  MyObjects_8h_source.tex  annotated.tex  classBreakout.tex  config_8h.tex  config_8h_source.tex  files.tex  freeglut__std_8h_source.tex  glut_8h_source.tex  refman.tex  structBall.tex  structBrick.tex  structPaddle.tex
cliente/: client  client.cpp
